<resources>
    <string name="app_name">Launcher</string>

    <string name="button_tv">TV</string>
    <string name="button_vod">Video Club</string>
    <string name="button_youtube">Youtube</string>
    <string name="button_netflix">Netflix</string>
    <string name="button_settings">Settings</string>
    <string name="button_updates">Updates</string>
    <string name="button_prefs">Server Prefs</string>
    <string name="button_diagnostics">Diagnostic Apps</string>

    <string name="update_applications_dlg_message">Update applications?</string>
    <string name="update_applications_dlg_ok">Update</string>
</resources>