<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/backgroundColor"
    tools:context=".LauncherActivity"
    >
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="?attr/theme_background_img"
        android:scaleType="centerCrop"
        />
    <TextView
        android:id="@+id/version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right|bottom"
        android:textSize="14sp"
        android:textColor="?attr/colorOnBackground"
        android:layout_margin="16dp"
        android:alpha="0.5"
        tools:text="0.0.0"
        />
    <ImageView
        android:id="@+id/icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:src="?attr/theme_logo_sm"
        android:layout_marginTop="40dp"
        />
    <TextView
        android:id="@+id/auth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|bottom"
        android:textSize="14sp"
        android:textColor="?attr/colorOnBackground"
        android:layout_margin="16dp"
        android:alpha="0.5"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_vertical"
        >
        <LinearLayout
            android:id="@+id/mainRow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:layout_marginTop="30dp"
            >
            <com.mc2soft.ontv.launcher.AppButtonView
                android:id="@+id/buttonOnTVPlayTV"
                app:app_button_title_text="@string/button_tv"
                app:app_button_icon="?attr/theme_appbutton_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
            <com.mc2soft.ontv.launcher.AppButtonView
                android:id="@+id/buttonOnTVPlayMovies"
                app:app_button_title_text="@string/button_vod"
                app:app_button_icon="?attr/theme_appbutton_vod"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
            <com.mc2soft.ontv.launcher.AppButtonView
                android:id="@+id/buttonYoutube"
                app:app_button_title_text="@string/button_youtube"
                app:app_button_icon="?attr/theme_appbutton_youtube"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
            <com.mc2soft.ontv.launcher.AppButtonView
                android:id="@+id/buttonNetflix"
                app:app_button_title_text="@string/button_netflix"
                app:app_button_icon="?attr/theme_appbutton_netflix"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
            <com.mc2soft.ontv.launcher.AppButtonView
                android:id="@+id/buttonSettings"
                app:app_button_title_text="@string/button_settings"
                app:app_button_icon="?attr/theme_appbutton_settings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/devRow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal"
            >
            <com.mc2soft.ontv.launcher.AppButtonView
                android:id="@+id/buttonCheckUpdates"
                app:app_button_title_text="@string/button_updates"
                app:app_button_icon="?attr/theme_appbutton_updates"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
            <com.mc2soft.ontv.launcher.AppButtonView
                android:id="@+id/buttonServerPrefs"
                app:app_button_title_text="@string/button_prefs"
                app:app_button_icon="?attr/theme_appbutton_server_prefs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
            <com.mc2soft.ontv.launcher.AppButtonView
                android:id="@+id/buttonDiagnostics"
                app:app_button_title_text="@string/button_diagnostics"
                app:app_button_icon="?attr/theme_appbutton_diagnostics"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/devAppsRow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:visibility="gone"
            >
            <com.mc2soft.ontv.launcher.AppButtonView
                android:id="@+id/buttonSpeedTest"
                app:app_button_title_text="Speed Test"
                app:app_button_icon="?attr/theme_appbutton_speedtest"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
        </LinearLayout>
    </LinearLayout>
</FrameLayout>
